tests-system/rbt-applicable-types/output
checks B {
       ^ rbt-applicable-types/foo.rsl:8: error: unknown symbol B
Processed 2 model(s), 0 check(s) and 0 requirement file(s) and found 1 error(s)
